@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.4 2021/10/26 10:15:55 nia Exp $
-
-BLAKE2s (ppxfind-1.4.tar.gz) = d4a92bbc30da83dd95d92403fe627e18bca846c3691e61987435cca83befafa4
-SHA512 (ppxfind-1.4.tar.gz) = 44beb6a723708a797a13fbe7f159708b88a2abf59338d9416bcf86b8f5ce650d99246d3488bd44e845f13e99e8d1e738456fe5b538f5a37803901dd9941c33bf
-Size (ppxfind-1.4.tar.gz) = 4289 bytes
