@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2022,v 1.2866 2022/06/03 08:30:47 wiz Exp $
+$NetBSD: CHANGES-2022,v 1.2867 2022/06/03 08:37:11 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2022:
 
@@ -4356,3 +4356,4 @@ Changes to the packages collection and infrastructure in 2022:
 	Updated sysutils/rcm to 1.3.5 [leot 2022-06-02]
 	Updated devel/ocaml-bos to 0.2.1 [wiz 2022-06-03]
 	Updated x11/libdrm to 2.4.111 [wiz 2022-06-03]
+	Removed devel/ocaml-ppxfind [wiz 2022-06-03]
